--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1,6 +1,13 @@
 .rent-car-model{
-    transform: translate(-50%, -50%);
     width: 800px;
+    height: 100vh;
+    overflow-y: auto;
+    right: -100%;
+    transition: all 0.4s ease-out;
+}
+
+.rent-car-model-active{
+    right: 0%;
 }
 
 .rent-car-model .form-parent{
