--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -18,6 +18,7 @@
 
 .rent-car-model .form-parent{
     border: 1px solid #ddd;
+    border-top: none;
     padding: 10px;
     display: flex;
     gap: 10px;
