--- a/src/css/table.css
+++ b/src/css/table.css
@@ -1,3 +1,3 @@
-tbody > tr:nth-child(even) > td {
-    background-color: #f0f0f0;
+.table-striped tbody > tr:hover > td {
+    background-color: #B8DAFF;
 }
