add the extend rent

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -41,3 +41,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.extend-modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 950px;
+}
