--- a/src/css/modal-overlay.css
+++ b/src/css/modal-overlay.css
@@ -1,9 +1,8 @@
 #overlay{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100vh;
     height: 100%;
     background-color: rgba(221, 221, 221, 0.687);
 }
