--- a/src/css/drop-down.css
+++ b/src/css/drop-down.css
@@ -66,6 +66,14 @@
   display: block;
   padding: 8px 10px;
 }
+
+.dropdown .no-option{
+  box-sizing: border-box;
+  background-color: rgba(255, 0, 0, 0.299);
+  color: black;
+  display: block;
+  padding: 8px 10px;
+}
   
 .dropdown .option.selected,
 .dropdown .option:hover {
