--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -9,4 +9,9 @@
 .loader:before {
     content:"Loading..."
 }
+
+.loader-center {
+    margin: auto;
+}
+
 @keyframes l4 {to{clip-path: inset(0 -1ch 0 0)}}
