--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -68,3 +68,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+@media (max-width: 992px) {
+    .extend-modal {
+        width: 100%;
+    }
+}
