--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -10,9 +10,25 @@
     min-width: 0;
 }
 
+.embla__slide{
+    flex-basis: calc(33.5% - 15px);
+}
+
 .slider-buttons{
     cursor: pointer;
 }
 .slider-buttons .disabled{
     cursor: default;
+}
+
+@media (max-width:992px) {
+    .embla__slide{
+        flex-basis: calc(50% - 15px);
+    }
+}
+
+@media (max-width:768px) {
+    .embla__slide{
+        flex-basis: calc(100% - 15px);
+    }
 }
