--- a/src/css/navigation-items.css
+++ b/src/css/navigation-items.css
@@ -1,6 +1,13 @@
 .mobile-navbar {
-    display: flex;
-    gap: 10px;
+    display: none;
+    border: 1px solid #333;
+    position: fixed;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    background-color: white;
+    padding: 20px !important;
+    transition: right 0.4s ease-in-out;
 }
 
 #close-mobile-menu {
@@ -25,13 +32,12 @@
         display: block;
     }
     .mobile-navbar {
+        display: flex;
         flex-direction: column !important;
-        border: 1px solid #333;
-        position: fixed;
-        top: 0%;
-        right: 0%;
-        bottom: 0%;
-        background-color: white;
-        padding: 20px !important;
+        gap: 10px;
+    }
+
+    #desktop-menu{
+        display: none;
     }
 }
